[package]
name = "baldr"
version = "0.1.0"
authors = ["CoBloX Team <team@coblox.tech>"]
edition = "2018"

[dependencies]
anyhow = "1"
async-trait = "0.1"
bitcoin = { version = "0.23", features = ["rand"] }
cross-curve-dleq = { git = "https://github.com/comit-network/cross-curve-dleq", rev = "2c2b83824183d9ac552b071b0013adf40e0bebbb" }
curve25519-dalek = "2"
ecdsa_fun = { git = "https://github.com/LLFourn/secp256kfun",  rev = "471d15ee1dade4baf459e1ed75ed53117bdb9270", features = ["libsecp_compat"] }
ed25519-dalek = "1.0.0-pre.4" # Cannot be 1 because they depend on curve25519-dalek version 3
miniscript = "1.0.0"
monero = "0.9.1"
rand = "0.7"
sha2 = "0.9"
thiserror = "1"


[dev-dependencies]
base64 = "0.12"
bitcoin-harness = { git = "https://github.com/coblox/bitcoin-harness-rs" , rev =  "d402b36d3d6406150e3bfb71492ff4a0a7cb290e"}
monero-harness = { path = "../monero-harness" }
reqwest = { version = "0.10", default-features = false }
testcontainers = "0.10"
tokio = { version = "0.2", default-features = false, features = ["blocking", "macros", "rt-core", "time", "rt-threaded"] }