[package]
name = "thunder"
version = "0.1.0"
authors = ["CoBloX Team <team@coblox.tech>"]
edition = "2018"
description = "A simple thor client"
readme = "README.md"
repository = "https://github.com/comit-network/thunder"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
sled = "0.34"
thor = { path = "../thor", features = ["use-serde"] }
